--- a/web/app/themes/sskotz v2/assets/css/post.css
+++ b/web/app/themes/sskotz v2/assets/css/post.css
@@ -1,107 +1,127 @@
 .header-banner {
-    display: none !important;
+  display: none !important;
 }
 
 .post-byline .post-tag {
-    color: #fff !important;
-    padding: 5px 20px;
-    margin-bottom: .5rem;
-    margin: 0 .2rem;
-    text-align: center;
+  color: #fff !important;
+  padding: 5px 20px;
+  margin-bottom: 0.5rem;
+  margin: 0 0.2rem;
+  text-align: center;
 }
 
 .post-byline .banner-tag {
-    background: #075891 !important;
+  background: #075891 !important;
 }
 
 .post-byline .activity-tag {
-    background: #4b1d7d !important;
+  background: #4b1d7d !important;
 }
 
 .post-byline .update-tag {
-    background: #ba742b !important;
+  background: #ba742b !important;
 }
 
 .post-byline .event-tag {
-    background: #91070c !important;
+  background: #91070c !important;
 }
 
 .post-byline .communication-tag {
-    background: #05733b !important;
+  background: #05733b !important;
 }
 
 .post-byline .news-tag {
-    background: #15d2e8 !important;
+  background: #15d2e8 !important;
+}
+
+.post-byline .cosmos-tag {
+  background: #1d74bf !important;
+}
+
+.post-byline .dungeons-tag {
+  background: #910f0f !important;
+}
+
+.post-byline .tips-tag {
+  background: #ba8e16 !important;
+}
+
+.post-byline .others-tag {
+  background: #600e8f !important;
+}
+
+.post-byline .guides-tag {
+  background: #1bc229 !important;
 }
 
 .post-full-content {
-    margin-top: 1rem;
-    margin-bottom: 4rem;
+  margin-top: 1rem;
+  margin-bottom: 4rem;
 }
 
 .post-full-content p,
 .post-full-content ul li {
-    font-size: 1.3em;
-    color: var(--font-color);
+  font-size: 1.3em;
+  color: var(--font-color);
 }
 
 .post-full-footer {
-    margin-top: 1vw;
-    padding: 3vw 0;
-    border-top: 1px solid var(--font-color);
+  margin-top: 1vw;
+  padding: 3vw 0;
+  border-top: 1px solid var(--font-color);
 }
 
 .post-full-footer .content {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 auto;
-    max-width: 840px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 auto;
+  max-width: 840px;
 }
 
 .post-full-footer .author-card .author-profile-image {
-    position: relative;
-    margin-right: 15px;
-    width: 80px;
-    height: 80px;
-    display: block;
-    background: #eee;
-    border-radius: 100%;
-    -o-object-fit: cover;
-    object-fit: cover;
+  position: relative;
+  margin-right: 15px;
+  width: 80px;
+  height: 80px;
+  display: block;
+  background: #eee;
+  border-radius: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
 }
 
 .post-full-footer .author-card .author-card-content .author-card-name {
-    margin: 15px 0 2px;
-    padding: 0;
-    font-size: 1.5rem;
+  margin: 15px 0 2px;
+  padding: 0;
+  font-size: 1.5rem;
 }
 
 .post-full-footer .author-card .author-card-content .author-card-name a {
-    color: var(--primary-color);
-    text-decoration: none;
+  color: var(--primary-color);
+  text-decoration: none;
 }
 
 .post-full-footer .author-card .author-card-content p {
-    margin: 0;
-    color: var(--font-color);
-    line-height: 1.3em;
+  margin: 0;
+  color: var(--font-color);
+  line-height: 1.3em;
 }
 
 .post-full-footer .author-more {
-    flex-shrink: 0;
-    margin-left: 20px;
+  flex-shrink: 0;
+  margin-left: 20px;
 }
 
 .post-full-footer .author-more .author-card-button {
-    display: block;
-    padding: 9px 16px 7px;
-    border: 1px solid var(--primary-color);
-    color: var(--primary-color);
-    font-size: 1rem;
-    line-height: 1;
-    font-weight: bold;
-    transition: all .2s ease;
-    text-decoration: none;
-    text-transform: uppercase;
+  display: block;
+  padding: 9px 16px 7px;
+  border: 1px solid var(--primary-color);
+  color: var(--primary-color);
+  font-size: 1rem;
+  line-height: 1;
+  font-weight: bold;
+  transition: all 0.2s ease;
+  text-decoration: none;
+  text-transform: uppercase;
 }
