--- a/web/app/themes/sskotz-v2/assets/css/archive.css
+++ b/web/app/themes/sskotz-v2/assets/css/archive.css
@@ -14,7 +14,7 @@
   box-sizing: border-box;
   position: relative;
   vertical-align: middle;
-  min-height: 270px;
+  min-height: 310px;
   display: flex;
   transition: all 0.8s ease-in-out;
 }
@@ -25,6 +25,10 @@
   position: absolute;
   width: 100%;
   height: 100%;
+}
+
+.cosmo-status span {
+  vertical-align: middle;
 }
 
 .cosmo-card-animation::before,
